--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
     defaultConfig {
-        applicationId 'com.dealfaro.luca.clicker'
+        applicationId 'logancollingwood.cmps121'
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
